<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devicewise.demo_android_sensor_app.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_server"
            android:inputType="text"
            android:text="@string/default_server" />

        <EditText
            android:id="@+id/editTextAppToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_token"
            android:inputType="text"
            android:text="@string/app_token" />

        <EditText
            android:id="@+id/editTextImei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:text="@string/imei" />

        <ToggleButton
            android:id="@+id/toggleButtonConn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="ConnButtonOnClick"
            android:text="@string/conn_connect"
            android:textOff="@string/conn_connect"
            android:textOn="@string/conn_disconnect" />

        <Switch
            android:id="@+id/switchLocEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/publish_location" />

        <Switch
            android:id="@+id/switchFastPub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rate_switch"
            android:textOff="@string/rate_5min"
            android:textOn="@string/rate_10sec" />

        <TextView
            android:id="@+id/textViewLoc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_current"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLoc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loc_fixacc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/switchAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_name" />

        <TextView
            android:id="@+id/textViewLog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLog4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLog5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLog6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textViewLog7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLog8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</FrameLayout>

